[package]
name = "app-chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axon = { git = "https://github.com/axonweb3/axon", branch = "main" }

[profile.release]
overflow-checks = true
opt-level = 3
